fixed layout (2nd)
fixed the layout problems for my second submission

--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
 /* -------  General Styles ------- */
+html, 
+body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
+}
 
 body {
   font-family: "Lato", sans-serif;
@@ -82,7 +90,7 @@ header nav ul li {
   list-style-type: none;
 }
 
-header nav ul li: :last-child {
+header nav ul li :last-child {
   margin-right: 0;
 }
 
@@ -118,9 +126,11 @@ form label {
 
 form select,
 form input {
+  display: flex;
   margin-bottom: 20px;
   width: 180px;
   align-items:end;
+  box-sizing: border-box;
 }
 
 form button {
@@ -145,7 +155,7 @@ footer p {
 }
 
 /* -------  Media Query ------- */
-@media screen and (min-width: 769px) {
+@media screen and (min-width: 480px) {
   header {
     display: flex;
     flex-direction: row;
@@ -166,8 +176,8 @@ footer p {
     display: flex;
     justify-content: center;
     align-self: center;
-    flex: 1;
-    flex-wrap: wrap;
+    flex: .5
+    ;
   }
   section .group {
     display: flex;
@@ -180,6 +190,15 @@ footer p {
     grid-gap: 20px;
   }
   #host .group .item {
+    align-self: center;
+    flex-direction: row;
+  }
+  #host .group .item p {
+    width: 100%;
+    flex: 1;
+    align-self: center;
+  }
+  #about .group .item {
     align-self: center;
   }
 }
